Catalog Item import endpoinds are added
